# OPENAI-PDF-API

./: Procfile  pyproject.toml  render.yaml  requirements.txt
src/openai_pdf_api/: app.py
