[project]
name = "openai-pdf-api"
version = "0.1.0"
description = ""
authors = [
    {name = "fernando.salazar",email = "fernando.salazar@rappi.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "openai (>=1.75.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "openai_pdf_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
